Fixed: Wave overflowing on mobile in x direction

--- a/frontend/src/components/animations/Waves/styles.css
+++ b/frontend/src/components/animations/Waves/styles.css
@@ -1,19 +1,8 @@
-body {
-  /* background: radial-gradient(
-    ellipse at center,
-    rgba(255, 254, 234, 1) 0%,
-    rgba(255, 254, 234, 1) 35%,
-    #b7e8eb 100%
-  ); */
-  overflow-x: hidden;
-}
-
 .ocean {
   height: 5%;
   width: 100%;
   position: absolute;
   bottom: 0;
-  /* top: 100vh; */
   left: 0;
   background: #015871;
 }
